Fix average points alignment in tests table #515

--- a/src/app/events/components/grades/average-grades/average-grades.component.scss
+++ b/src/app/events/components/grades/average-grades/average-grades.component.scss
@@ -2,11 +2,11 @@
 @import "node_modules/bootstrap/scss/mixins";
 
 .average-points {
-  min-width: 4em;
+  min-width: calc(4em + 0.5em);
 }
 
 @include media-breakpoint-up(sm) {
   .average-points {
-    min-width: 5em;
+    min-width: calc(5em + 1em);
   }
 }
